feat: add bubble

--- a/index.html
+++ b/index.html
@@ -66,6 +66,21 @@
                     [&::-moz-range-thumb]:w-5 [&::-moz-range-thumb]:h-5 [&::-moz-range-thumb]:rounded-full 
                     [&::-moz-range-thumb]:bg-purple-400 [&::-moz-range-thumb]:border-0 [&::-moz-range-thumb]:cursor-pointer">
             </div>
+<!-- 
+            <div class="mb-6">
+                <label class="flex justify-between items-center text-white font-semibold mb-3 text-sm">
+                    <span class="uppercase tracking-wide">Intensitas Gelembung</span>
+                    <span id="bubbleIntensityValue" class="bg-cyan-500 px-3 py-1 rounded-full text-xs font-bold">0.10</span>
+                </label>
+                <input type="range" id="bubbleIntensity" min="0" max="0.5" step="0.01" value="0.1"
+                    class="w-full h-2 bg-white/20 rounded-full outline-none appearance-none cursor-pointer
+                    [&::-webkit-slider-thumb]:appearance-none [&::-webkit-slider-thumb]:w-5 [&::-webkit-slider-thumb]:h-5 
+                    [&::-webkit-slider-thumb]:rounded-full [&::-webkit-slider-thumb]:bg-cyan-400 
+                    [&::-webkit-slider-thumb]:cursor-pointer [&::-webkit-slider-thumb]:shadow-lg
+                    [&::-webkit-slider-thumb]:hover:bg-cyan-300 [&::-webkit-slider-thumb]:transition-all
+                    [&::-moz-range-thumb]:w-5 [&::-moz-range-thumb]:h-5 [&::-moz-range-thumb]:rounded-full 
+                    [&::-moz-range-thumb]:bg-cyan-400 [&::-moz-range-thumb]:border-0 [&::-moz-range-thumb]:cursor-pointer">
+            </div> -->
 
             <div
                 class="bg-gradient-to-br from-slate-900/90 to-slate-800/90 backdrop-blur-sm p-5 rounded-2xl border border-white/10 mb-6">
