--- a/index.html
+++ b/index.html
@@ -146,6 +146,13 @@
                 class="w-full py-4 rounded-xl font-bold text-white bg-gradient-to-r from-pink-500 to-rose-500 hover:from-pink-600 hover:to-rose-600 transition-all duration-300 shadow-lg hover:shadow-xl hover:scale-105 active:scale-95 uppercase tracking-wide">
                 Reset Simulasi
             </button>
+
+            <button id="dayNightBtn"
+                class="w-full py-4 rounded-xl font-bold text-white bg-gradient-to-r from-indigo-500 to-purple-500 hover:from-indigo-600 hover:to-purple-600 transition-all duration-300 shadow-lg hover:shadow-xl active:scale-95 mt-4 flex items-center justify-center gap-2">
+                <span id="modeIcon">🌙</span>
+                <span id="modeText">Mode Malam</span>
+            </button>
+
         </div>
     </div>
 
