feat: add cameraView

--- a/index.html
+++ b/index.html
@@ -153,6 +153,35 @@
                 <span id="modeText">Mode Malam</span>
             </button>
 
+            <div class="mt-4">
+                <label class="block text-white font-semibold mb-3 text-sm uppercase tracking-wide">
+                    Preset Kamera
+                </label>
+                <div class="grid grid-cols-2 gap-2">
+                    <button id="defaultViewBtn"
+                        class="px-4 py-3 rounded-xl font-bold text-xs transition-all duration-300 bg-white/20 text-white hover:bg-white/30 hover:scale-105 active:scale-95 border-2 border-transparent hover:border-white">
+                        Default
+                    </button>
+                    <button id="topViewBtn"
+                        class="px-4 py-3 rounded-xl font-bold text-xs transition-all duration-300 bg-white/20 text-white hover:bg-white/30 hover:scale-105 active:scale-95 border-2 border-transparent hover:border-white">
+                        Top View
+                    </button>
+                    <button id="sideViewBtn"
+                        class="px-4 py-3 rounded-xl font-bold text-xs transition-all duration-300 bg-white/20 text-white hover:bg-white/30 hover:scale-105 active:scale-95 border-2 border-transparent hover:border-white">
+                        Side View
+                    </button>
+                    <button id="closeUpBtn"
+                        class="px-4 py-3 rounded-xl font-bold text-xs transition-all duration-300 bg-white/20 text-white hover:bg-white/30 hover:scale-105 active:scale-95 border-2 border-transparent hover:border-white">
+                        Close-Up
+                    </button>
+                    <button id="frontViewBtn"
+                        class="px-4 py-3 rounded-xl font-bold text-xs transition-all duration-300 bg-white/20 text-white hover:bg-white/30 hover:scale-105 active:scale-95 border-2 border-transparent hover:border-white col-span-2">
+                        Front View
+                    </button>
+                </div>
+            </div>
+
+
         </div>
     </div>
 
